Thu May  8 19:56:56 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataDurabilityCache.cpp:
        * dds/DCPS/TransientDataDurabilityCache.cpp:

          Added the required pre-compiled header include.

Wed May  8 20:20:03 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * dds/DCPS/OfferedDeadlineWatchdog.cpp (execute):
        * dds/DCPS/OfferedDeadlineWatchdog.h:
        * dds/DCPS/RequestedDeadlineWatchdog.cpp (execute):
        * dds/DCPS/RequestedDeadlineWatchdog.h:

          Made the reverse lock a member of the class since it only needs
          to be instantiated once.

          Added missing ACE_GUARD that actually acquires and releases the
          reverse lock.  Thanks to Adam and Mike for pointing out the
          missing guard.

Wed May  8 19:16:33 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * dds/DCPS/Qos_Helper.inl (valid):

          Work around "INFINITY" preprocessor macro namespace pollution.
          s/INFINITY/DDS_DURATION_INFINITY/g.  Thanks to Adam for pointing
          out the error.

Wed May  8 07:32:53 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * dds/DCPS/WatchdogTimer.h:

          Removed unnecessary include directive for "ace/Atomic_Op_T.h"
          header.

Wed May  8 06:47:12 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * dds/DCPS/OfferedDeadlineWatchdog.cpp:
        * dds/DCPS/OfferedDeadlineWatchdog.h:
        * dds/DCPS/RequestedDeadlineWatchdog.cpp:
        * dds/DCPS/RequestedDeadlineWatchdog.h:
        * dds/DCPS/Watchdog.cpp:
        * dds/DCPS/Watchdog.h:
        * dds/DCPS/WatchdogTimer.cpp:
        * dds/DCPS/WatchdogTimer.h:

          New "watchdog" implementations responsible for reporting missed
          offered and requested deadlines, i.e. deadlines corresponding to
          the "Deadline" QoS policy.

        * dds/DCPS/DataReaderImpl.cpp (init):

          Initialize the new RequestedDeadlineWatchdog member if a finite