@@ -1,4 +1,5 @@
 // $Id$
+#include "DCPS/DdsDcps_pch.h" //Only the _pch include should start with DCPS/
 
 #include "OfferedDeadlineWatchdog.h"
 #include "Qos_Helper.h"
