@@ -1,3 +1,13 @@
+Thu May  8 20:12:39 UTC 2008  Adam Mitz  <mitza@ociweb.com>
+
+        * dds/DCPS/OfferedDeadlineWatchdog.cpp:
+        * dds/DCPS/RequestedDeadlineWatchdog.cpp:
+        * dds/DCPS/TransientDataDurabilityCache.cpp:
+        * dds/DCPS/Watchdog.cpp:
+        * dds/DCPS/WatchdogTimer.cpp:
+
+          Further fixed for Visual C++.
+
 Thu May  8 19:56:56 UTC 2008  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DCPS/DataDurabilityCache.cpp:
